--- a/package.json
+++ b/package.json
@@ -17,12 +17,12 @@
     "@fortawesome/react-fontawesome": "^0.2.0",
     "graphql": "^16.5.0",
     "html-react-parser": "^3.0.4",
-    "next": "^14.2.3",
+    "next": "^14.2.13",
     "next-intl": "^3.15.3",
     "numeral": "^2.0.6",
     "query-string": "^7.1.1",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "react-icons": "^4.4.0",
     "react-intersection-observer": "^9.13.0",
     "uuid": "^8.3.2"
