--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@fortawesome/free-regular-svg-icons": "^6.2.0",
     "@fortawesome/free-solid-svg-icons": "^6.2.0",
     "@fortawesome/react-fontawesome": "^0.2.0",
+    "critters": "^0.0.24",
     "graphql": "^16.5.0",
     "html-react-parser": "^3.0.4",
     "next": "^14.2.13",
