--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-dom": "^18.3.1",
     "react-icons": "^4.4.0",
     "react-intersection-observer": "^9.13.0",
+    "sharp": "^0.33.5",
     "uuid": "^8.3.2"
   },
   "devDependencies": {
